syntax = "proto3";

option go_package = "github.com/Vitokz/Task/gRPC/rpc";

package rpc;


service Fibonacci {
  rpc CalculateFibonacci(FibRequest) returns (FibResponse) {}
}

message FibRequest {
  string from = 1;
  string to = 2;
}

message FibResponse {
  repeated FibStruct numbers = 1  ;
}

message FibStruct {
   int64 index =1;
   int64 value =2;
}